# kappari

./: .env.example  .gitignore  README.md  api.md  authentication.md  crypto.md  data-schemas.md  encoding.md  endpoints.md  patterns.md  pyproject.toml  schema.md  sqlite.md
.github/workflows/: lint.yml  tests.yml
kappari/: README.md  __init__.py  auth.py  config.py  network_client.py  roundtrip.py
kappari/cs/: README.md
src/: README.md  auth.py  auth_example.py  config.py  decrypt_license.py  demo_crypto.py  log.py  network_client.py  paprika_auth.py  roundtrip.py
src/cs/: StringExtractor.cs
tests/: conftest.py  test_auth.py  test_config.py  test_network.py  test_roundtrip.py
