[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "kappari"
version = "0.1.0"
description = "Paprika Recipe Manager API documentation and implementation"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pycryptodome>=3.15.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "requests-toolbelt>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py38"
include = ["src/**/*.py", "*.py"]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print (ban print statements)
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PL",  # pylint
    "RUF", # ruff-specific rules
]

ignore = [
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value in comparison
]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"